--- a/src/Home.css
+++ b/src/Home.css
@@ -10,7 +10,7 @@
     justify-content: center;
     margin-left: auto;
     margin-right: auto;
-    max-width: 1500px;
+    /* max-width: 1500px; */
  
     }
     
@@ -20,3 +20,5 @@
         margin-left: 5px;
         margin-right: 5px;
     }
+
+  
