--- a/src/ContactForm.css
+++ b/src/ContactForm.css
@@ -36,19 +36,42 @@
 
 .canvas__contactInfo__left>button{
     margin-top: 10%;
-    /* border-radius: 50px; */
     background: transparent !important;
-    border: 2px solid #fff;
+    /* border: 2px solid #fff; */
     color: #fff;
-    display: flex;
     
-    
-   
-
 }
+
+.canvas__contactInfo__left>button:hover{
+    color: rgb(99, 4, 99);
+}
+
 
 .ContactForm__modalInput{
     width: 100%;
-    height: 40px;
-    margin-bottom: 2%;
+    height: 45px !important;
+    /* margin-bottom: 4%; */
+    margin-top: 4%;
+    font-family: Playfair Display, serif;
+    border: 1px solid white;
+    padding: 12px !important;
+
+}
+
+.ContactForm__modalInput:focus{
+    outline: none;
+}
+
+.modal__contactForm{
+    background-image: url(https://image.freepik.com/free-vector/powder-pastel-wallpaper-concept_23-2148600640.jpg);
+    font-family: Playfair Display, serif;
+   
+}
+
+.modal__contactForm >p{
+text-align: center;
+}
+
+.modal__contactForm >button{
+    font-family: Helvetica, Arial, sans-serif;
 }
