--- a/src/Header.css
+++ b/src/Header.css
@@ -13,43 +13,24 @@
 
 .header{
     display: flex;
-    align-items: center;
     height: 65px;
-    position: sticky;
-    top: 0;
+    /* position: sticky;
+    top: 0; */
     z-index: 100;
     width: 100%;
+    background:linear-gradient(-45deg, #23a6d5, #8f44ad,#46b39e,#34c7a5);
+    animation: gradient 10s ease infinite;
 }
-
-/* .header__searchIcon{
-    background-color: #cd9042;
-    height: 30px;
-    padding: 2px;
-    width: 25px !important;
-    
-} */
-
-/* .header__search{
-    display: flex;
-    flex:1;
-} */
-
-/* .header__searchInput{
-    height:12px;
-    padding: 13px;
-    outline-color: transparent;
-    width: 100%;
-} */
 
 .header__nav{
     display: flex;
-    /* margin-left: 60%; */
     justify-content: space-evenly;
 }
 
 .header__link{
-    color: white;
+    color:#0a2540;
     text-decoration: none !important;
+    
 }
 
 .header__link:hover{
@@ -59,25 +40,29 @@
 
 .header__option{
     display: flex;
-    flex-direction: column;
+    /* flex-direction: column; */
     align-items: center;
     margin: 0px 20px 0px 10px;
+  
     
     
 }
 
 .header__optionLineOne{
-    font-size: 10px ;
+    font-size: 15px ;
+    padding: 4px 8px;
+  
 }
 .header__optionLineTwo{
-    font-size: 13px;
-    font-weight: 600;
+    font-size: 14px;
+    font-weight: 700;
+    padding: 4px 8px;
 }
 
 .header__optionBasket{
     display: flex;
     align-items: center;
-    color: white;
+    color: rgb(14, 13, 13);
     text-decoration: none !important;
     margin:  5px 10px 0px 10px;
 }
@@ -96,3 +81,8 @@
 
 
 
+.dropdown:hover .header__dropdown {
+    display: block;
+    border-radius: 5px;
+
+}
