--- a/src/DesignCards.css
+++ b/src/DesignCards.css
@@ -1,4 +1,4 @@
-.recipeContent__container{
+.DesignCards__container{
     width: 1000px;
     position: relative;
     display: flex;
@@ -7,25 +7,25 @@
 }
 
 @media screen and (max-width: 600px){
-    .recipeContent__container{
+    .DesignCards__container{
         display: flex;
         flex-direction: column;
         width: 100% !important;
     }
 }
 
-.recipeContent__container .recipeContent__card{
+.DesignCards__container .DesignCards__card{
     position: relative;
     cursor: pointer;
 }
 
-.recipeContent__container .recipeContent__card .face{
+.DesignCards__container .DesignCards__card .face{
     width: 300px;
     height: 250px;
     transition: 0.5s;
 }
 
-.recipeContent__container .recipeContent__card .face.face1{
+.DesignCards__container .DesignCards__card .face.face1{
     position: relative;
     background: #333;
     display: flex;
@@ -35,36 +35,36 @@
     transform: translateY(130px);
 }
 
-.recipeContent__container .recipeContent__card:hover .face.face1{
+.DesignCards__container .DesignCards__card:hover .face.face1{
     background: linear-gradient(-45deg, #f403d1, #64b5f6);
     transform: translateY(0);
 }
 
-.recipeContent__container .recipeContent__card2:hover .face.face1{
+.DesignCards__container .DesignCards__card2:hover .face.face1{
     background: linear-gradient(-45deg, #f321d7, #ffec61);
     transform: translateY(0);
 }
 
-.recipeContent__container .recipeContent__card3:hover .face.face1{
+.DesignCards__container .DesignCards__card3:hover .face.face1{
     background: linear-gradient(-45deg, #24ff72, #9a4eff);
     transform: translateY(0);
 }
 
 
-.recipeContent__container .recipeContent__card .face.face1 .recipeContent__content{
+.DesignCards__container .DesignCards__card .face.face1 .DesignCards__content{
     opacity: 0.2;
     transition: 0.5s;
 }
 
-.recipeContent__container .recipeContent__card:hover .face.face1 .recipeContent__content{
+.DesignCards__container .DesignCards__card:hover .face.face1 .DesignCards__content{
     opacity: 1;
 }
 
-.recipeContent__container .recipeContent__card .face.face1 .recipeContent__content img{
+.DesignCards__container .DesignCards__card .face.face1 .DesignCards__content img{
     max-width: 100px;
 }
 
-.recipeContent__container .recipeContent__card .face.face1 .recipeContent__content h3{
+.DesignCards__container .DesignCards__card .face.face1 .DesignCards__content h3{
     margin: 10px 0 0;
     padding: 0;
     color: #fff;
@@ -72,9 +72,9 @@
     font-size: 1.5em;
 }
 
-.recipeContent__container .carrecipeContent__card .face.face2{
+.DesignCards__container .DesignCards__card .face.face2{
     position: relative;
-    background: #fff;
+    /* background: #fff; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -84,16 +84,16 @@
     transform: translateY(-100px);
 }
 
-.recipeContent__container .recipeContent__card:hover .face.face2{
+.DesignCards__container .DesignCards__card:hover .face.face2{
     transform: translateY(0);
 }
 
-.recipeContent__container .carrecipeContent__card .face.face2 .recipeContent__content p{
+.DesignCards__container .DesignCards__card .face.face2 .DesignCards__content p{
     margin: 0;
     padding: 0;
 }
 
-.contairecipeContent__containerner .recipeContent__card .face.face2 .recipeContent__content a{
+.DesignCards__container .DesignCards__card .face.face2 .DesignCards__content a{
     margin: 15px 0 0;
     display:  inline-block;
     text-decoration: none;
@@ -103,7 +103,7 @@
     border: 1px solid #333;
 }
 
-.recipeContent__container .recipeContent__card .face.face2 .recipeContent__content a:hover{
+.DesignCards_container .DesignCards__card .face.face2 .DesignCards__content a:hover{
     background: #333;
     color: #fff;
 }
