--- a/src/Product.css
+++ b/src/Product.css
@@ -3,17 +3,18 @@
     flex-direction: column;
     align-items: center;
     justify-content: flex-end;
-    margin: 1%;
-    padding: 20px;
+    /* margin: 2%; */
+    padding: 15px;
     width: 100%;
-    max-height: 500px;
-    min-width: 100px;
+    /* max-height: 800px;
+    min-width: 100px; */
     background-color: white;
     z-index: 1;
 }
 
+
 .product > img{
-    max-height: 200px;
+    /* max-height: 300px; */
     width: 100%;
     object-fit: contain;
     margin-bottom: 15px;
@@ -23,7 +24,7 @@
 .product__info{
     height: 100px;
     margin-bottom: 75px;
-    width: 80%;
+    width: 95%;
 }
 
 .product__price{
