--- a/src/profile/Product.css
+++ b/src/profile/Product.css
@@ -6,26 +6,34 @@
     /* margin: 2%; */
     padding: 15px;
     width: 100%;
-    /* max-height: 800px;
-    min-width: 100px; */
-    background-color: white;
+    background-color: #f1f2f6;
+    background-image: linear-gradient(315deg, #f1f2f6 0%, #c9c6c6 74%);
     z-index: 1;
+
 }
 
 
-.product > img{
-    /* max-height: 300px; */
+.product>img{
     width: 100%;
     object-fit: contain;
     margin-bottom: 15px;
-    /* margin-top: 10px !important; */
+
 }
+
+.product>img:hover{
+    transition: transform 2s, filter 1.5s ease-in-out;
+    transform-origin: center center;
+    transform: scale(0.9);
+}
+
 
 .product__info{
     height: 100px;
     margin-bottom: 75px;
-    width: 95%;
+    width: 95%;  
+    color: black; 
 }
+
 
 .product__price{
     margin-top: 5px;
