--- a/src/profile/Product.css
+++ b/src/profile/Product.css
@@ -3,20 +3,20 @@
     flex-direction: column;
     align-items: center;
     justify-content: flex-end;
-    /* margin: 2%; */
-    padding: 15px;
+    margin-top: 2%;
+    padding: 5px;
     width: 100%;
-    background-color: #f1f2f6;
-    background-image: linear-gradient(315deg, #f1f2f6 0%, #c9c6c6 74%);
     z-index: 1;
-
 }
 
 
 .product>img{
     width: 100%;
     object-fit: contain;
-    margin-bottom: 15px;
+    margin-bottom: 1px;
+    -webkit-box-shadow: 0 16px 8px -8px rgb(148, 147, 147);
+    -moz-box-shadow: 0 16px 8px -8px rgb(148, 147, 147);
+    box-shadow: 0 16px 8px -8px rgb(148, 147, 147);
 
 }
 
@@ -28,10 +28,14 @@
 
 
 .product__info{
-    height: 100px;
-    margin-bottom: 75px;
+    height: 200px;
+    margin-top: 25px;
     width: 95%;  
     color: black; 
+    /* -webkit-box-shadow: 3px 3px 5px 6px #ccc;
+    -moz-box-shadow: 3px 3px 5px 6px #ccc;
+    box-shadow: 3px 3px 5px 6px #ccc; */
+
 }
 
 
@@ -50,3 +54,4 @@
 .product__rating{
     display: flex;
 }
+
