--- a/src/LandingServicesCards.css
+++ b/src/LandingServicesCards.css
@@ -27,8 +27,10 @@
 
   .LandingCardServices__info{
     float: right;
-    color: red;
+    color:  #23a6d5;
     object-fit: contain;
+    font-size: 20px;
+    margin-right: 10px;
   }
 
   .LandingServices__blob{
