--- a/src/LandingServicesCards.css
+++ b/src/LandingServicesCards.css
@@ -1,9 +1,8 @@
 .LandingCardServices__cards{
-    background-color: transparent !important;
+    background-color: white !important;
      margin:4% 2% 4% 3%;
      transition: top ease 0.5s;
      display: flex;
-     /* position: relative; */
      transition: transform 0.8s;
   transform-style: preserve-3d;
   font-family: Playfair Display, serif
@@ -21,7 +20,7 @@
     backface-visibility: hidden;
     position: absolute;
     transform: rotateY(180deg);
-    background-color:rgb(234, 237, 237);
+    background-color:white;
    padding-left: 4%;
   }
 
@@ -31,6 +30,21 @@
     object-fit: contain;
     font-size: 20px;
     margin-right: 10px;
+  }
+  .row_cards{
+    background:linear-gradient(45deg, #8f44ad 0%,#46b39e 100%);
+  }
+  .button_container{
+    border-color: white;
+    width: 25%;
+    margin:auto;
+    border-radius: 5px;
+    padding: 1%;
+    border-style: solid;
+    border-width: 1px;
+  }
+  .button_container:hover{
+    background-color: white;
   }
 
   .LandingServices__blob{
@@ -45,6 +59,23 @@
     margin-right: 1%;
   }
 
+  .LandingServicesBlob__left * p{
+  margin:0%;
+  color: white;
+}
+
+.LandingServicesBlob__left * P:hover {
+  color: rgb(99, 4, 99);
+}
+
+.LandingServicesBlob__right * p{
+  margin:0%;
+  color: white;
+}
+.LandingServicesBlob__right * P:hover {
+  color: rgb(99, 4, 99);
+}
+
   .LandingServicesBlob__left> h2{
     color:white;
     font-family: Playfair Display, serif;
@@ -58,6 +89,7 @@
     text-align: center;
     padding: 10%;
     font-size: 18px;
+    margin-bottom: 0 !important;
   }
 
   .LandingServicesBlob__right> h2{
